--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:mysql}
+    username: root
+    password: mysql
     url: jdbc:mysql://${MYSQL_HOST:192.168.120.201}:${MYSQL_PORT:3306}/ajb_vap?useUnicode=true&useSSL=false&characterEncoding=UTF-8
     filters: stat
     maxActive: 20
@@ -163,7 +163,7 @@ feign:
 
 logging:
   level:
-    com.vrv.apicasom: warn
+    com.vrv.vap.apicasom: info
     root: warn
     org:
       elasticsearch:
