--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:mysql}
+    password: ${MYSQL_PASSWORD:ENC(x+wfYaxzw+HWonGdlN2f/A==)}
     url: jdbc:mysql://${MYSQL_HOST:192.168.120.201}:${MYSQL_PORT:3306}/ajb_vap?useUnicode=true&useSSL=false&characterEncoding=UTF-8
     filters: stat
     maxActive: 20
@@ -89,10 +89,7 @@ vap:
     databases:
       - url: jdbc:mysql://${MYSQL_HOST:192.168.120.201}:${MYSQL_PORT:3306}/ajb_vap?useUnicode=true&useSSL=false&characterEncoding=UTF-8
         username: ${MYSQL_USER:root}
-        password: ${MYSQL_PASSWORD:mysql}
-      - url: jdbc:mysql://${MYSQL_HOST:192.168.120.201}:${MYSQL_PORT:3306}/ajb_vap?useUnicode=true&useSSL=false&characterEncoding=UTF-8
-        username: ${MYSQL_USER:root}
-        password: ${MYSQL_PASSWORD:mysql}
+        password: mysql
     driver: ${DATABASE_DRIVER:com.mysql.jdbc.Driver}
     insert-sql: insert into sys_log (id, request_ip,type, user_id, user_name, organization_name, description, request_url, request_time, request_method, method_name, bean_name, params_value, response_result, login_type, role_name) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
   swagger:
