--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:ENC(x+wfYaxzw+HWonGdlN2f/A==)}
+    password: ${MYSQL_PASSWORD:mysql}
     url: jdbc:mysql://${MYSQL_HOST:192.168.120.201}:${MYSQL_PORT:3306}/ajb_vap?useUnicode=true&useSSL=false&characterEncoding=UTF-8
     filters: stat
     maxActive: 20
@@ -24,15 +24,6 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   main:
     show-banner: false
-  data:
-    elasticsearch:
-      cluster-name: ${ES_CLUSTER_NAME:elasticsearch-cluster}
-      cluster-client-nodes: ${ES_CLUSTER_HOST:192.168.120.201}:${ES_CLUSTER_PORT:9200}
-      http:
-        username: ${ES_CLUSTER_UNAME:admin}
-        password: ${ES_CLUSTER_PWD:vrv@12345}
-        maxConnectNum: 100
-        maxConnectPerRoute: 100
   session:
     store-type: redis
   redis:
@@ -69,17 +60,9 @@ liquibase:
   enabled: true
   change-log: classpath:sql/changelog-master.xml
 
-es:
-  shardCount: 5
-  repliceCount: 0
-
-
-
 jasypt:
   encryptor:
     password: salt
-
-
 vap:
   flume:
     enable: true
@@ -99,6 +82,11 @@ vap:
     base-package: com.vrv.vap.alarmdeal
     version: 2.5.4
 
+#时长分段、参会人数分段配置
+metting:
+  config:
+    numbersubsection: 2-5,6-10,11-20,21-30,31-40，40-
+    timesubsection: 0-60,60-90,90-120,120-150,150-180,180-
 
 #打开所有 Actuator 服务
 management:
