增加日志信息记录

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,6 +136,9 @@ feign:
 
 hw:
   meeting:
+    sys:
+      username: admin
+      password: admin@1234
     organizationId:
     token: 0 */10 * * * ?
     url: http://192.168.118.228:9888
