--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,6 +47,9 @@ spring:
     time-zone: GMT+8
 dataflag: es
 version: chutian
+druid:
+  mysql:
+    usePingMethod: false
 ribbon:
   okhttp:
     enabled: true
@@ -78,7 +81,7 @@ vap:
         password: ${MYSQL_PASSWORD:mysql}
     driver: ${DATABASE_DRIVER:com.mysql.jdbc.Driver}
     insert-sql: insert into sys_log (id, request_ip,type, user_id, user_name, organization_name, description, request_url, request_time, request_method, method_name, bean_name, params_value, response_result, login_type, role_name) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
- swagger:
+  swagger:
     enabled: true
     title: api-alarmdeal接口文档
     description: api-接口文档
