--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>vap-service</artifactId>
             <exclusions>
                 <exclusion>
+                    <groupId>commons-fileupload</groupId>
+                    <artifactId>commons-fileupload</artifactId>
+                </exclusion>
+                <exclusion>
                     <artifactId>jackson-databind</artifactId>
                     <groupId>com.fasterxml.jackson.core</groupId>
                 </exclusion>
@@ -165,6 +169,10 @@
             <version>1.1.7</version>
             <exclusions>
                 <exclusion>
+                    <groupId>com.vrv.vap</groupId>
+                    <artifactId>vap-utils</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.apache.logging.log4j</groupId>
                     <artifactId>log4j-to-slf4j</artifactId>
                 </exclusion>
@@ -258,6 +266,12 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
         </dependency>
     </dependencies>
 
