--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -145,7 +145,8 @@ feign:
 hw:
   send:
     time: 0 */1 * * * ?
-    url: http://192.168.118.228:9888/AKOD/rest/api/v1/statFileExchange/getLocalNum
+    url: http://192.168.118.228:9888/AKOD/rest/api/v1/statFileExchange/getRemoteNum
+    local-url: http://192.168.118.228:9888/AKOD/rest/api/v1/statFileExchange/getLocalNum
   meeting:
     sys:
       username: admin
