--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -143,8 +143,11 @@ feign:
     enabled: true
 
 hw:
+  exchange-box:
+    time: 59 59 23 * * ?
+    url: http://192.168.118.228:9888
   send:
-    time: 0 */1 * * * ?
+    time: 0 */10 * * * ?
     url: http://192.168.118.228:9888/AKOD/rest/api/v1/statFileExchange/getRemoteNum
     local-url: http://192.168.118.228:9888/AKOD/rest/api/v1/statFileExchange/getLocalNum
   meeting:
