会议同步采用nacos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -167,8 +167,7 @@ hw:
     organizationId:
     token: 0 */10 * * * ?
     url: http://192.168.118.228:9888
-
-
+    time:  0 */9 * * * ?
 
 logging:
   level:
