修改了注释说明

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -173,8 +173,8 @@ hw:
     time:  0 */10 * * * ?   #已预约会议数据同步频次
     histime:  0 */8 * * * ?   #历史会议同步频次
     synchtype: 1  # 1 手动改同步开始时间 默认为2
-    hisstarttime: 2023-08-03 16:40:00 #synchtype为1生效
-    onlinestarttime: 2023-07-05 00:00:00 #synchtype为1生效
+    hisstarttime: 2023-08-03 16:40:00 #synchtype为1生效，历史数据同步开始时间
+    onlinestarttime: 2023-07-05 00:00:00 #synchtype为1生效，在线数据同步开始时间
 
 logging:
   level:
