数据同步梳理后修改

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -175,7 +175,7 @@ hw:
       starttime: 2023-08-03 16:40:00 #补全开始时间
       endtime: 2023-08-05 16:40:00 #补全结束时间
     organizationId: 8ab9e3c4-69ce-04e5-0169-ce058e5d1234 #取会议室列表时,组织结构id
-    token: 0 */9 * * * ?   #token更新频次
+    token: 0 */4 * * * ?   #分院/城市信息,会议室数量信息
     url: http://192.168.118.228:9888   #调用华为接口ip级端口
     time:  0 */15 * * * ?   #已预约会议数据同步频次
     histime:  0 */18 * * * ?   #历史会议同步频次
